  * Add -u option to the ldd manpage.  (Closes: #354074)
  * Merged a patch from Michael Bank to use gcc-4.0 on Hurd.
  * Add resource_h.diff (RLIMIT_NICE and RLIMIT_RTPRIO support) from MAIN.  
    (Closes: #352636)
  * Add hppa-inlining.diff (Increase the maximal overall growth of the
    compilation unit caused by inlining for dl-reloc.c on hppa).
    
 -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500

glibc (2.3.6-1) unstable; urgency=low

  [ Denis Barbier ]
  * debian/debhelper.in/libc.postinst: Restart webmin on upgrade.
    (Closes: #345641)
  * debian/debhelper.in/libc.postinst: Restart dropbear on upgrade.
    (Closes: #351036)
  * Fix yesexpr/noexpr in tl_PH locale.  Reported by eric pareja.
    (Closes: #295810)
  * Fix langinfo(_NL_TIME_FIRST_WEEKDAY) for C locale.  Reported by
    Graham Wilson (Closes: #327025)
  * Add first_weekday fields to most locales.
    (Closes: #343885, #347323, #347686, #348518, #351375)
  * Apply various fixes to French locales.  (Closes: #248377)
  * Fix d_t_fmt and date_fmt in fo_FO. Reported by Jacob Sparre Andersen.
  * New sa_IN locale file, provided by Vidya Ayer and Christian Perrier.
    (Closes: #331377)
  * Add several locales to SUPPORTED:
    - ru_RU.CP1251, requested by Michael Bravo.  (Closes: #225516)
    - uz_UZ.UTF-8 (its ISO-8859-1 counterpart had no UTF-8 variant)
    - da_DK.ISO-8859-15, en_GB.ISO-8859-15, en_US.ISO-8859-15, no_NO.UTF-8,
      no_NO and sv_SE.ISO-8859-15 are found in fedora-branch CVS branch.
  * Apply several improvements to hy_AM found in upstream Bugzilla.
  * Fix LC_MONETARY section of en_DK and provide en_DK.ISO-8859-15.
    (Closes: #323159)
  * Improve localedef(1) manual page, by Lars Wirzenius (Closes: #309846)
  * Fix LC_MONETARY section of pl_PL. Reported by Michał Politowski.
    (Closes: #227214)
  * New wo_SN locale file, provided by Samba Ndao Diop and Christian
    Perrier.  (Closes: #279697)