@@ -107,6 +107,8 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
     (Closes: #352636)
   * Add hppa-inlining.diff (Increase the maximal overall growth of the
     compilation unit caused by inlining for dl-reloc.c on hppa).
+  * Build a 32-bit libc on amd64, using the new multiarch directories.
+    (Closes: #274367)
     
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
